# mario_kart_trainer

./: Cargo.toml  times.db
src/: app_database.rs  app_error.rs  data_model.rs  main.rs  shared_error.rs  tracker_app_view.rs
src/data_model/: database_queries.rs  mod.rs
