[package]
name = "mario_kart_trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
directories = "6.0.0"
eframe = "0.31.1"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
